# bjit

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
bf_tests/: hello_world2.bf  loop_test.bf  nested_loops.bf  output_name.bf  output_number.bf  overflow.bf  primes.bf  underflow.bf
include/: bf.h  bf_lexer.h  elf.h  microasm.h  stack.h
research/: arm64_mmap_munmap  arm64_mmap_munmap.s
src/: bf.c  bf_lexer.c  main.c  microasm.c  stack.c
